# adm27

./: .gitignore  README.md  Rakefile.rb  adm27-stack.cabal  stack.yaml
ruby/: gui.rb  model.rb
src/: adm27.hs  adm27DB.hs  adm27Data.hs  adm27Graphics.hs  adm27Images.hs  adm27Page1.hs  adm27Page2.hs  main.hs
