name:                adm27-stack
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/adm27-stack#readme
license:             BSD3
license-file:        LICENSE
author:              Example Author Name
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable adm27
  hs-source-dirs:      src
  main-is:             main.hs
  other-modules:       Adm27
                     , Adm27DB
                     , Adm27Data
                     , Adm27Graphics
                     , Adm27Images
                     , Adm27Page1
                     , Adm27Page2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , time
                     , bytestring
                     , HPDF
                     , options
                     , yaml
  default-language:    Haskell2010
